--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="pt-BR">
 
 <head>
@@ -52,3 +51,14 @@
 </body>
 
 </html>
+<head>
+    <!-- Código omitido -->
+
+    <title>Guiminamflix</title>
+</head>
+
+<body>
+    <header>GUIMINAMFLIX</header>
+
+    <!-- Código omitido -->
+</body>
